```mermaid
erDiagram
    %% Nhóm dữ liệu người dùng, Watchlist & Mô phỏng (Simulation)
    USER {
        String id PK
        String email
        String displayName
        DateTime createdAt
    }
    WATCHLIST {
        String id PK
        String userId FK
        String companyId FK
        String ticker
        String status
        String thesisSummary
        DataMode dataMode
    }
    PAPER_TRADE {
        String id PK
        String userId FK
        String companyId FK
        String ticker
        PaperTradeAction action
        Decimal quantity
        Decimal entryPrice
        Decimal exitPrice
        PaperTradeStatus status
        String thesisSnapshot
    }

    %% Nhóm dữ liệu AI & Context
    ASSISTANT_INTERACTION {
        String id PK
        String userId FK
        String companyId FK
        String activeModule
        String question
        String answer
        String moduleContext "Dữ liệu context tránh AI bịa số liệu"
        String dataQualityContext
    }

    %% Nhóm dữ liệu Doanh nghiệp / Cổ phiếu
    COMPANY {
        String id PK
        String ticker
        String exchange
        String companyName
        CompanyType companyType
        String industryName
        DataMode dataMode
        String profileSourceId FK
    }

    %% Nhóm dữ liệu Báo cáo Tài chính
    FINANCIAL_STATEMENT {
        String id PK
        String companyId FK
        String ticker
        PeriodType periodType
        String period
        Decimal revenue
        Decimal netIncome
        Decimal equity "Dùng cho ROE, P/B. Thiếu/Âm -> ko tính"
        Decimal totalDebt "Nợ vay, phân biệt với Nợ phải trả"
        Decimal currentLiabilities
        Decimal eps "Dùng cho P/E. Thiếu/Âm -> ko tính"
        Decimal sharesOutstanding
        String sourceId FK
        QualityStatus qualityStatus
        String missingFields "Ko dùng số 0 thay cho null"
        String warningCodes
    }
    FINANCIAL_STATEMENT_UNIT_METADATA {
        String id PK
        String financialStatementId FK
        String field
        String unit
        String status
    }

    %% Nhóm dữ liệu Giá Thị trường
    MARKET_PRICE {
        String id PK
        String companyId FK
        String ticker
        DateTime tradingDate
        Decimal closePrice
        Decimal volume
        Decimal marketCap
        String sourceId FK
        QualityStatus qualityStatus
        String missingFields
        String warningCodes
    }
    MARKET_PRICE_UNIT_METADATA {
        String id PK
        String marketPriceId FK
        String field
        String unit
        String status
    }

    %% Nhóm dữ liệu Nguồn, Bằng chứng & Chất lượng
    DATA_SOURCE {
        String id PK
        String name
        SourceType sourceType
        SourceUsageStatus usageStatus
        LegalReviewStatus licenseStatus
    }
    SOURCE_EVIDENCE {
        String id PK
        String sourceId FK
        String documentationUrl
        PermissionFlag allowsAcademicUse
        SourceEvidenceStatus evidenceStatus
    }
    DATA_QUALITY_REPORT {
        String id PK
        String scopeType
        String scopeId
        QualityStatus qualityStatus
        String missingFields
        String topIssues
    }
    MANUAL_IMPORT_SESSION {
        String id PK
        String userId FK
        String dataQualityReportId FK
        String mode
        SourceType sourceType
        ManualImportStatus status
    }
    MANUAL_IMPORT_RECORD {
        String id PK
        String sessionId FK
        String companyId FK
        String financialStatementId FK
        String marketPriceId FK
        Int rowIndex
        String warnings
        String errors
    }

    %% Định nghĩa Quan hệ
    USER ||--o{ WATCHLIST : "has"
    USER ||--o{ PAPER_TRADE : "has"
    USER ||--o{ ASSISTANT_INTERACTION : "interacts"
    USER ||--o{ MANUAL_IMPORT_SESSION : "conducts"
    
    COMPANY ||--o{ WATCHLIST : "tracked_in"
    COMPANY ||--o{ PAPER_TRADE : "traded_in"
    COMPANY ||--o{ ASSISTANT_INTERACTION : "context_for"
    COMPANY ||--o{ FINANCIAL_STATEMENT : "has"
    COMPANY ||--o{ MARKET_PRICE : "has"
    COMPANY ||--o{ MANUAL_IMPORT_RECORD : "referenced_in"
    
    DATA_SOURCE ||--o{ COMPANY : "provides_profile"
    DATA_SOURCE ||--o{ FINANCIAL_STATEMENT : "provides"
    DATA_SOURCE ||--o{ MARKET_PRICE : "provides"
    DATA_SOURCE ||--o{ SOURCE_EVIDENCE : "has_evidence"
    
    FINANCIAL_STATEMENT ||--o{ FINANCIAL_STATEMENT_UNIT_METADATA : "has_metadata"
    MARKET_PRICE ||--o{ MARKET_PRICE_UNIT_METADATA : "has_metadata"
    
    DATA_QUALITY_REPORT ||--o{ MANUAL_IMPORT_SESSION : "validates"
    MANUAL_IMPORT_SESSION ||--o{ MANUAL_IMPORT_RECORD : "contains"
    FINANCIAL_STATEMENT ||--o{ MANUAL_IMPORT_RECORD : "updated_by"
    MARKET_PRICE ||--o{ MANUAL_IMPORT_RECORD : "updated_by"
```
